🎈 migrate some items' func. to their own listeners -> migrated ColorStaffItem func. to its own listener -> migrated PassengerEnderPearlItem func. to its own listener -> other misc. changes